--- a/templates/view/firstpage/index.html
+++ b/templates/view/firstpage/index.html
@@ -8,15 +8,18 @@
     <link rel="stylesheet" href="../../css/bases/common.css">
     <link rel="stylesheet" href="../../css/hearder/hearder.css">
     <link rel="stylesheet" href="../../css/firstpage/firstpage.css">
+    <link rel="stylesheet" href="../../css/footer/footer.css">
 </head>
 <body>
 
 
-<iframe class="iframecontent" frameborder=0 width="100%" height="auto" src="../header/index.html"
-        style="min-width: 1200px"></iframe>
+<!--<iframe class="iframecontent" frameborder=0 width="100%" height="100%" src="../header/index.html"
+        style="min-width: 1200px;clear: both;"></iframe>-->
+
+<iframe class="iframecontent" frameborder=0 width="100%" scrolling="no" src="../header/index.html" style="min-width: 1200px;min-height: 249px;"></iframe>
 
 <!--中间的内容开始-->
-<div class="out-wrap">
+<div class="clearfix out-wrap ">
     <div class="specify">
         <div class="navs clearfix">
             <div class="all-in">
@@ -697,10 +700,10 @@
 
     <!--服饰-->
     <div class="floors">
-        <div class="floors specify .selected-items clearfix">
-            <div class="benifits-goods  clearboth" id="1F">
+        <div class="floors specify selected-items clearfix">
+            <div class="benifits-goods  clearfix" id="1F">
                 <div class="title">超值单品</div>
-                <div class="list" style="position: relative;overflow: hidden;">
+                <div class="list" style="position: relative;">
                     <a class="item" target="_blank" href="#" style=" margin-top: 0px;">
                         <!-- <img class="abso tag" src="../../images/firstpage/bf.png">-->
                         <div class="picture icon"
@@ -970,7 +973,7 @@
             <!--    </div>&lt;!&ndash;specify  结束&ndash;&gt;-->
 
             <!--     <div class="floors specify .selected-items clearfix">-->
-            <div class="benifits-goods  clearboth" id="2F">
+            <div class="benifits-goods  clearfix" id="2F">
                 <div class="title">官网大促
                     <a target="_blank" href="#" class="fr">全部大促<span class="icon"></span></a>
                 </div>
@@ -1533,7 +1536,7 @@
             </div><!--benifits-goods end  2F结束-->
 
 
-            <div class="benifits-goods  clearboth" id="3F">
+            <div class="benifits-goods  clearfix" id="3F">
                 <div class="title">服饰
                     <div class="linkselect fr">
                         <a target="_blank" href="#" class="fr">连衣裙</a>
@@ -1591,7 +1594,7 @@
             </div><!--3F结束-->
 
 
-            <div class="benifits-goods  clearboth" id="4F">
+            <div class="benifits-goods  clearfix" id="4F">
                 <div class="title">鞋靴
                     <div class="linkselect fr">
                         <a target="_blank" href="#" class="fr">连衣裙</a>
@@ -1648,7 +1651,7 @@
                 </div>
             </div><!--4F结束-->
 
-            <div class="benifits-goods  clearboth" id="5F">
+            <div class="benifits-goods  clearfix" id="5F">
                 <div class="title">包袋
                     <div class="linkselect fr">
                         <a target="_blank" href="#" class="fr">连衣裙</a>
@@ -1705,7 +1708,7 @@
                 </div>
             </div><!--5F结束-->
 
-            <div class="benifits-goods  clearboth" id="6F">
+            <div class="benifits-goods  clearfix" id="6F">
                 <div class="title">包袋
                     <div class="linkselect fr">
                         <a target="_blank" href="#" class="fr">连衣裙</a>
@@ -1762,7 +1765,7 @@
                 </div>
             </div><!--6F结束-->
 
-            <div class="benifits-goods  clearboth" id="7F">
+            <div class="benifits-goods  clearfix" id="7F">
                 <div class="title">包袋
                     <div class="linkselect fr">
                         <a target="_blank" href="#" class="fr">连衣裙</a>
@@ -1819,7 +1822,7 @@
                 </div>
             </div><!--7F结束-->
 
-            <div class="benifits-goods  new-products clearboth" id="8F">
+            <div class="benifits-goods  new-products clearfix" id="8F" >
                 <div class="title">新品推荐
                 </div>
                 <div class="block  clearfix">
@@ -2059,19 +2062,174 @@
                     </div>
                 </div><!--block end-->
 
-            </div><!--benifits-goods end  6F结束-->
+            </div><!--benifits-goods end  8F结束-->
 
 
+            <!--猜你喜欢-->
+            <div class="clearfix guesslist guesslike">
+                <div class="titlename">
+                    <a href="javascript:;">
+                        <span class="icon icon-refresh fr"></span>
+                        <span class="text-refresh fr">换一批</span>
+                    </a>
+                    猜你喜欢
+                </div>
+                <div class="list">
+                    <div class="imgitems">
+                        <a class="imgitem" href="#" target="_blank">
+                            <div class="picture icon" style="background-image: url('../../images/firstpage/good555.jpg');height: 248px;
+                                width: 198px;">
+                            </div>
+                            <div class="brand text-elip" title="Kerastase/卡诗">Kerastase/卡诗</div>
+                            <div class="brand text-elip brand-t"
+                                 title="强韧修护洗发水 250ml Kérastase Resistance Bain Force Architecte 250ml">
+                                强韧修护洗发水 250ml Kérastase Resistance Bain Force Architecte 250ml
+                            </div>
+                            <div class="market text-elip">¥ 101 <span>&nbsp;¥174&nbsp;</span><em>6.4折</em></div>
+                            <div class="seller text-elip" title="Lookfantastic">英国 Lookfantastic 官网发货</div>
+                        </a>
+                        <a class="imgitem" href="#" target="_blank">
+                            <div class="picture icon" style="background-image: url('../../images/firstpage/good555.jpg');height: 248px;
+                                width: 198px;">
+                            </div>
+                            <div class="brand text-elip" title="Kerastase/卡诗">Kerastase/卡诗</div>
+                            <div class="brand text-elip brand-t"
+                                 title="强韧修护洗发水 250ml Kérastase Resistance Bain Force Architecte 250ml">
+                                强韧修护洗发水 250ml Kérastase Resistance Bain Force Architecte 250ml
+                            </div>
+                            <div class="market text-elip">¥ 101 <span>&nbsp;¥174&nbsp;</span><em>6.4折</em></div>
+                            <div class="seller text-elip" title="Lookfantastic">英国 Lookfantastic 官网发货</div>
+                        </a>
+                        <a class="imgitem" href="#" target="_blank">
+                            <div class="picture icon" style="background-image: url('../../images/firstpage/good555.jpg');height: 248px;
+                                width: 198px;">
+                            </div>
+                            <div class="brand text-elip" title="Kerastase/卡诗">Kerastase/卡诗</div>
+                            <div class="brand text-elip brand-t"
+                                 title="强韧修护洗发水 250ml Kérastase Resistance Bain Force Architecte 250ml">
+                                强韧修护洗发水 250ml Kérastase Resistance Bain Force Architecte 250ml
+                            </div>
+                            <div class="market text-elip">¥ 101 <span>&nbsp;¥174&nbsp;</span><em>6.4折</em></div>
+                            <div class="seller text-elip" title="Lookfantastic">英国 Lookfantastic 官网发货</div>
+                        </a>
+                        <a class="imgitem" href="#" target="_blank">
+                            <div class="picture icon" style="background-image: url('../../images/firstpage/good555.jpg');height: 248px;
+                                width: 198px;">
+                            </div>
+                            <div class="brand text-elip" title="Kerastase/卡诗">Kerastase/卡诗</div>
+                            <div class="brand text-elip brand-t"
+                                 title="强韧修护洗发水 250ml Kérastase Resistance Bain Force Architecte 250ml">
+                                强韧修护洗发水 250ml Kérastase Resistance Bain Force Architecte 250ml
+                            </div>
+                            <div class="market text-elip">¥ 101 <span>&nbsp;¥174&nbsp;</span><em>6.4折</em></div>
+                            <div class="seller text-elip" title="Lookfantastic">英国 Lookfantastic 官网发货</div>
+                        </a>
+                        <a class="imgitem" href="#" target="_blank">
+                            <div class="picture icon" style="background-image: url('../../images/firstpage/good555.jpg');height: 248px;
+                                width: 198px;">
+                            </div>
+                            <div class="brand text-elip" title="Kerastase/卡诗">Kerastase/卡诗</div>
+                            <div class="brand text-elip brand-t"
+                                 title="强韧修护洗发水 250ml Kérastase Resistance Bain Force Architecte 250ml">
+                                强韧修护洗发水 250ml Kérastase Resistance Bain Force Architecte 250ml
+                            </div>
+                            <div class="market text-elip">¥ 101 <span>&nbsp;¥174&nbsp;</span><em>6.4折</em></div>
+                            <div class="seller text-elip" title="Lookfantastic">英国 Lookfantastic 官网发货</div>
+                        </a>
+                    </div><!--imgitems end-->
+                </div><!--list end-->
+            </div><!--guesslist end -->
 
         </div><!--specify 结束-->
     </div><!--floors 结束-->
 </div><!--out-wrap end-->
 
-<!--<div style="width: 200px;height: 300px;">
 
-</div>-->
+<div class="new-footer clearfix" >
+    <div class="pop-img">
+        <div class="item">
+            <div class="icon">
+                正
+            </div>
+            <div>
+                <div class="title">
+                    官网直购
+                </div>
+                <span>海外官网发货，100%正品</span>
+            </div>
+        </div>
+        <div class="item">
+            <div class="icon">
+                ￥
+            </div>
+            <div>
+                <div class="title">
+                    实时同价
+                </div>
+                <span>实时同步海外官网价格及折扣</span>
+            </div>
+        </div>
+        <div class="item">
+            <div class="icon">
+                量
+            </div>
+            <div>
+                <div class="title">
+                    海量商品
+                </div>
+                <span>全球千万商品，一站购齐</span>
+            </div>
+        </div>
+        <div class="item">
+            <div class="icon">
+                正
+            </div>
+            <div>
+                <div class="title">
+                    一键海淘
+                </div>
+                <span>支付宝，微信一键下单</span>
+            </div>
+        </div>
+    </div>
+    <ul class="links">
+        <li>
+            <div>购物导航</div>
+            <a href="#" target="_blank">全部商家</a>
+            <a href="#" target="_blank">全部品牌</a>
+        </li>
+        <li>
+            <div>HelpCenter</div>
+            <a href="#" target="_blank">购物流程</a>
+            <a href="#" target="_blank">支付方式</a>
+            <a href="#" target="_blank">常见问题</a>
+            <a href="#" target="_blank">客服中心</a>
+            <a href="#" target="_blank">购物须知</a>
+        </li>
+        <li>
+            <div>账号中心</div>
+            <a href="#" target="_blank">我的订单</a>
+            <a href="#" target="_blank">我的账号</a>
+            <a href="#" target="_blank">购物车</a>
+            <a href="#" target="_blank">客服中心</a>
+            <a href="#" target="_blank">购物须知</a>
+        </li>
+        <li>
+            <div>HelpCenter</div>
+            <a href="#" target="_blank">购物流程</a>
+            <a href="#" target="_blank">支付方式</a>
+            <a href="#" target="_blank">常见问题</a>
+            <a href="#" target="_blank">客服中心</a>
+            <a href="#" target="_blank">购物须知</a>
+        </li>
+    </ul>
 
-<script>
+    <div class="statement clearfix">© 2011-2017 五五海淘（上海）科技股份有限公司 沪ICP备13007891号</div>
+</div>
+
+
+<!--<iframe class="iframecontent"  frameborder=0 width="100%" src="../footer/index.html" style="min-width: 1200px;min-height: 309px;margin-bottom: 0px;">-->
+<!--<script>
     var oUl = document.getElementById('uls');
     var aLis = oUl.getElementsByTagName('li');
     /*原点点击*/
@@ -2118,7 +2276,7 @@
     }
 
     oPrev.onclick = function () {
-        iNow--;
+        iNow&#45;&#45;;
         if (iNow < aLis.length && iNow >= 0) {
             changeImg(iNow);
         } else {
@@ -2178,7 +2336,9 @@
         }
     }
 
-</script>
+</script>-->
+
+<script type="text/javascript" src="../../../templates/js/module/js/firstpage.js"></script>
 
 </body>
 </html>
