--- a/templates/view/header/index.html
+++ b/templates/view/header/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../../css/hearder/hearder.css">
 </head>
 <body>
-<a class="top-adv" style="display: none;"></a>
+<a class="top-adv" style="display: block;"></a>
 
 <div class="toper clearfix">
     <div class="specify">
