--- a/templates/css/firstpage/firstpage.css
+++ b/templates/css/firstpage/firstpage.css
@@ -11,6 +11,13 @@
     background-color: #fff;
 }
 
+.out-wrap .cates-banner .cates{
+    margin: 0;
+    width: 223px;
+    height: 485px;
+    background-color: rgba(51, 51, 51, 0.88);
+}
+
 .out-wrap .all-in {
     cursor: pointer;
     width: 135px;
@@ -38,15 +45,13 @@
 .out-wrap .cates-banner {
     height: 485px;
 }
-.out-wrap .cates-banner {
+/*.out-wrap .cates-banner {
     width: 1200px;
     height: 485px;
     position: absolute;
     z-index: 99;
-    margin-top: 4px;
     margin-left: -50px;
-    display: none;
-}
+}*/
 
 .out-wrap .banner {
     width: 1200px;
@@ -158,7 +163,7 @@
     width: 223px;
     height: 485px;
     z-index: 1;
-    background-color: rgba(51, 51, 51, 0.88) !important;
+   /* background-color: rgba(51, 51, 51, 0.88) !important;*/
 }
 
 .out-wrap .cates li.cate:first-child {
