--- a/templates/css/websearch/websearch.css
+++ b/templates/css/websearch/websearch.css
@@ -90,7 +90,7 @@
 
 
 .out-wrap .part-3 ul.menu {
-    display: none;
+    display: block;
     padding: 0 20px;
     height: auto;
     max-height: 280px;
