--- a/templates/css/common/common.css
+++ b/templates/css/common/common.css
@@ -4,14 +4,17 @@
     margin: 0 auto;
     width: 1200px;
 }
+
 .out-wrap .navs {
     height: 52px;
     background-color: #fff;
 }
+
 .out-wrap .navs .link.active {
     border-bottom: 4px solid #333;
 }
-.out-wrap .navs .all-in {/*全部商品分类*/
+
+.out-wrap .navs .all-in { /*全部商品分类*/
     cursor: pointer;
     padding: 0 65px 0 50px;
     float: left;
@@ -20,21 +23,23 @@
     font: 400 17px/52px "Microsoft YaHei", tahoma, arial, sans-serif !important;
 }
 
-.out-wrap .navs .link {/*菜单*/
+.out-wrap .navs .link { /*菜单*/
     float: left;
     margin-right: 65px;
     border-bottom: 4px solid transparent;
     color: #333;
     font: 400 17px/52px "Microsoft YaHei", tahoma, arial, sans-serif !important;
 }
-.icon {/*所有关于图片都都要继承*/
+
+.icon { /*所有关于图片都都要继承*/
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     display: inline-block;
     float: left;
 }
-.out-wrap .icon-func {/*全部商品分类小图标*/
+
+.out-wrap .icon-func { /*全部商品分类小图标*/
     margin-top: 17px;
     margin-right: 10px;
     width: 20px;
@@ -42,17 +47,19 @@
     background-image: url(../../images/firstpage/tutu.png);
 }
 
-.out-wrap .icon-fold {/*向下的箭头*/
+.out-wrap .icon-fold { /*向下的箭头*/
     float: right;
     margin: 26px 0 0 10px;
     width: 11px;
     height: 6px;
     background-image: url(../../images/firstpage/icon-fold.png);
 }
+
 .out-wrap .all-in:hover .cates-banners {
     display: block !important;
 }
-.out-wrap .cates-banner {/*大框*/
+
+.out-wrap .cates-banner { /*大框*/
     width: 1200px;
     height: 485px;
     position: absolute;
@@ -61,9 +68,11 @@
     margin-left: -50px;
     display: none;
 }
+
 .abso {
-    position: absolute !important;
+    position: absolute !important; /*相对于父元素的定位*/
 }
+
 .out-wrap .cates-banner .cates {
     margin: 0;
     width: 223px;
@@ -72,8 +81,7 @@
     /* background-color: rgba(51, 51, 51, 0.88); */
 }
 
-
-.out-wrap .all-in:hover .cates-banners {/*鼠标移动显示*/
+.out-wrap .all-in:hover .cates-banners { /*鼠标移动显示*/
     display: block !important;
 }
 
@@ -85,18 +93,19 @@
     /* background-color: rgba(51, 51, 51, 0.88); */
 }
 
-
 .out-wrap .cates li.cate {
     margin-top: -1px;
-    border-bottom: 1px solid rgba(222,222,222,0.4);
+    border-bottom: 1px solid rgba(222, 222, 222, 0.4);
     width: 203px;
     padding-top: 40px;
     height: 57px;
 }
+
 .out-wrap .cates li.cate:first-child {
     margin-top: 0px;
     height: 56px;
 }
+
 .out-wrap .cates li.cate:hover, .out-wrap .cates li.cate.hover {
     border-bottom: 1px solid transparent;
     width: 223px;
@@ -115,16 +124,19 @@
     margin-top: -40px;
     display: none;
 }
+
 .out-wrap .cates li.cate:hover .white, .out-wrap .cates li.cate.hover .white {
     display: block;
     background: #fff;
 }
+
 .out-wrap .cates .icon-cloth {
     margin-right: 16px;
     width: 29px;
     height: 24px;
     background-image: url(../../images/firstpage/icon-cloth.png);
 }
+
 .out-wrap .cates li.cate:hover .icon-cloth, .out-wrap .cates li.cate.hover .icon-cloth {
     background-image: url(../../images/firstpage/icon-cloth-h.png);
 }
@@ -132,35 +144,43 @@
 .out-wrap .cates .cate-hd {
     padding-left: 36px;
 }
+
 .out-wrap .cates .cate a {
     color: #fff;
     font: 400 16px/24px "Microsoft YaHei", tahoma, arial;
 }
+
 .out-wrap .cates li.cate:hover a, .out-wrap .cates li.cate.hover a {
     color: #010101;
     /* color: red; */
 }
+
 .out-wrap .cates li.cate a {
     color: #fff;
     float: left;
 }
+
 .out-wrap .cates .cate-bd {
     height: 27px;
     padding-bottom: 5px;
     padding-left: 36px;
     overflow: hidden;
 }
+
 .out-wrap .cates .cate-bd li {
     float: left;
     height: 100%;
 }
+
 .out-wrap .cates .cate-bd a {
     font-size: 13px;
     color: #aaa !important;
 }
+
 .out-wrap .cates .cate-bd .slash {
     padding: 0 3px;
 }
+
 .out-wrap .cates .cate-bd a {
     font-size: 13px;
     color: #aaa !important;
@@ -179,22 +199,27 @@
     height: 485px;
     box-shadow: 0px 0px 4px 0px rgba(68, 68, 68, 0.4);
 }
+
 .out-wrap .hover-box {
     width: 100%;
 }
+
 .out-wrap .cates-box {
     width: 605px;
     max-height: 485px;
     overflow: hidden;
 }
+
 .out-wrap .cates-box .part:nth-child(odd) {
     margin-left: 0;
 }
+
 .out-wrap .cates-box .part {
     margin-left: 72px;
     width: 265px;
     float: left;
 }
+
 .out-wrap .cates-box .part .title {
     padding: 42px 0 10px;
     margin: 0;
@@ -202,12 +227,15 @@
     font: 400 16px/16px "Microsoft YaHei", tahoma, arial;
     border-bottom: 1px solid #e5e5e5;
 }
+
 .out-wrap .cates-box .part .list {
     margin-top: 14px;
 }
+
 .out-wrap .cates-box .part a.hot {
     color: #fd8553 !important;
 }
+
 .out-wrap .cates-box .part a {
     color: #333;
     width: 50%;
@@ -216,11 +244,13 @@
     margin-top: 16px;
     font: 400 13px/17px "Microsoft YaHei", tahoma, arial;
 }
+
 .out-wrap .brands-box {
     width: 235px;
     max-height: 465px;
     overflow: hidden;
 }
+
 .out-wrap .brands-box .title {
     padding: 42px 0 10px;
     margin: 0;
@@ -228,6 +258,7 @@
     font: 400 16px/18px "Microsoft YaHei", tahoma, arial;
     border-bottom: 1px solid #e5e5e5;
 }
+
 .out-wrap .brands-box a {
     display: inline-block;
     background-repeat: no-repeat;
@@ -240,6 +271,67 @@
     margin-top: 30px;
     margin-left: 19px;
 }
+
 .out-wrap .brands-box a:nth-child(odd) {
     margin-left: 0;
 }
+
+button, input, select, textarea {
+    font: 16px/1.5 Helvetica, Arial;
+    outline: none;
+}
+
+textarea, input {
+    background: none;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    -webkit-appearance: none;
+}
+
+address, em, i, b {
+    font-style: normal;
+}
+
+/*页码样式*/
+.pages {
+    color: #7f7f7f;
+    cursor: default;
+    font-size: 12px;
+    font-family: Tahoma, Verdana;
+    margin: 32px auto;
+    text-align: center
+}
+
+.pages .arrow, .pages .count, .pages .number {
+    color: #000;
+    font-size: 12px
+}
+
+.pages .count {
+    font-weight: 700;
+    border-right: none;
+    padding: 2px 10px 1px 10px
+}
+
+.pages .number {
+    font-weight: 400
+}
+
+.pages .number a {
+    font: 400 12px/14px "BrandonGrotesque", "AvenirNext-Regular", "Helvetica", "Arial", sans-serif !important;
+    color: #666;
+    text-decoration: none;
+    padding: 6px 11px 5px;
+    border: 1px solid #d8d8d8;
+    margin-right: 5px;
+    background-color: #fff;
+    cursor: pointer
+}
+
+.pages .current {
+    background-color: #666 !important;
+    color: #fff !important;
+    border-color: #666 !important;
+    cursor: inherit !important
+}
+
