--- a/templates/css/common/common.css
+++ b/templates/css/common/common.css
@@ -335,3 +335,44 @@ address, em, i, b {
     cursor: inherit !important
 }
 
+
+/*版权信息css*/
+.pop-img {
+    margin: 0 auto;
+    padding: 40px 0;
+    width: 1160px;
+    height: 48px;
+}
+.pop-img .item:first-child {
+    margin-left: 40px;
+}
+.pop-img .item {
+    margin-left: 70px;
+    float: left;
+    overflow: hidden;
+    width: 220px;
+}
+.pop-img .item span {
+    font: 400 12px/18px "Microsoft YaHei",tahoma,arial;
+    color: #b5b5b5;
+}
+.pop-img .item .icon {
+    border-radius: 50%;
+    color: #fff;
+    border: 1px solid #fff;
+    width: 46px;
+    height: 46px;
+    margin: 4px 10px 4px 0;
+    float: left;
+    text-align: center;
+    font: 400 19px/46px "Microsoft YaHei",tahoma,arial;
+}
+.icon {
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: inline-block;
+    float: left;
+}
+
+
