--- a/templates/view/websearch/index.html
+++ b/templates/view/websearch/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="../../css/bases/common.css">
     <link rel="stylesheet" href="../../css/hearder/hearder.css">
 
-    <link rel="stylesheet" href="../../css/footer/footer.css">
     <link rel="stylesheet" href="../../css/common/common.css">
     <link rel="stylesheet" href="../../css/websearch/websearch.css">
+    <link rel="stylesheet" href="../../css/footer/footer.css">
 </head>
 <body>
 
@@ -1806,10 +1806,97 @@
                 </div>
             </div><!--p3-goods 列表展示商品区-->
 
+
+
             <div class=" clearfix"></div>
         </div><!--specify end-->
     </div><!--part-3 end-->
+
+
+
 </div><!--out-wrap end-->
+
+<!--版权信息代码-->
+<div class="new-footer clearfix" style="padding-bottom: 0px;">
+    <div class="pop-img">
+        <div class="item">
+            <div class="icon">
+                正
+            </div>
+            <div>
+                <div class="title">
+                    官网直购
+                </div>
+                <span>海外官网发货，100%正品</span>
+            </div>
+        </div>
+        <div class="item">
+            <div class="icon">
+                ￥
+            </div>
+            <div>
+                <div class="title">
+                    实时同价
+                </div>
+                <span>实时同步海外官网价格及折扣</span>
+            </div>
+        </div>
+        <div class="item">
+            <div class="icon">
+                量
+            </div>
+            <div>
+                <div class="title">
+                    海量商品
+                </div>
+                <span>全球千万商品，一站购齐</span>
+            </div>
+        </div>
+        <div class="item">
+            <div class="icon">
+                正
+            </div>
+            <div>
+                <div class="title">
+                    一键海淘
+                </div>
+                <span>支付宝，微信一键下单</span>
+            </div>
+        </div>
+    </div>
+    <ul class="links">
+        <li>
+            <div>购物导航</div>
+            <a href="#" target="_blank">全部商家</a>
+            <a href="#" target="_blank">全部品牌</a>
+        </li>
+        <li>
+            <div>HelpCenter</div>
+            <a href="#" target="_blank">购物流程</a>
+            <a href="#" target="_blank">支付方式</a>
+            <a href="#" target="_blank">常见问题</a>
+            <a href="#" target="_blank">客服中心</a>
+            <a href="#" target="_blank">购物须知</a>
+        </li>
+        <li>
+            <div>账号中心</div>
+            <a href="#" target="_blank">我的订单</a>
+            <a href="#" target="_blank">我的账号</a>
+            <a href="#" target="_blank">购物车</a>
+            <a href="#" target="_blank">客服中心</a>
+        </li>
+        <li>
+            <div>关于我们</div>
+            <a href="#" target="_blank">官网直购</a>
+            <a href="#" target="_blank">法律顾问</a>
+            <a href="#" target="_blank">常见问题</a>
+
+        </li>
+    </ul>
+
+    <div class="statement clearfix">© 2011-2017 五五海淘（上海）科技股份有限公司 沪ICP备13007891号</div>
+</div>
+
 
 
 <!--<div class="new-footer clearfix" >
