首页还缺版权部分其他基本完成

--- a/templates/css/common/common.css
+++ b/templates/css/common/common.css
@@ -185,7 +185,9 @@
     font-size: 13px;
     color: #aaa !important;
 }
-
+.bg-f5-to-f0{
+    background: #f5f5f5;
+}
 /*hover-boxs*/
 .out-wrap .hover-boxs {
     visibility: hidden;
