--- a/templates/view/websearch/index.html
+++ b/templates/view/websearch/index.html
@@ -1827,7 +1827,7 @@
                 <div class="title">
                     官网直购
                 </div>
-                <span>海外官网发货，100%正品</span>
+                <span>厂家直接发货，100%正品</span>
             </div>
         </div>
         <div class="item">
@@ -1838,7 +1838,7 @@
                 <div class="title">
                     实时同价
                 </div>
-                <span>实时同步海外官网价格及折扣</span>
+                <span>实时同步厂家价格及折扣</span>
             </div>
         </div>
         <div class="item">
@@ -1849,16 +1849,16 @@
                 <div class="title">
                     海量商品
                 </div>
-                <span>全球千万商品，一站购齐</span>
+                <span>全球千万酒品，一站购齐</span>
             </div>
         </div>
         <div class="item">
             <div class="icon">
-                正
+                付
             </div>
             <div>
                 <div class="title">
-                    一键海淘
+                    一键支付
                 </div>
                 <span>支付宝，微信一键下单</span>
             </div>
@@ -1894,7 +1894,7 @@
         </li>
     </ul>
 
-    <div class="statement clearfix">© 2011-2017 五五海淘（上海）科技股份有限公司 沪ICP备13007891号</div>
+    <div class="statement clearfix">© 2011-2017 合肥魅加网络科技有限公司 沪ICP备13007891号</div>
 </div>
 
 
