--- a/templates/view/firstpage/index.html
+++ b/templates/view/firstpage/index.html
@@ -2144,8 +2144,8 @@
     </div><!--floors 结束-->
 </div><!--out-wrap end-->
 
-
-<div class="new-footer clearfix" >
+<!--版权信息代码-->
+<div class="new-footer clearfix" style="padding-bottom: 0px;">
     <div class="pop-img">
         <div class="item">
             <div class="icon">
@@ -2155,7 +2155,7 @@
                 <div class="title">
                     官网直购
                 </div>
-                <span>海外官网发货，100%正品</span>
+                <span>厂家直接发货，100%正品</span>
             </div>
         </div>
         <div class="item">
@@ -2166,7 +2166,7 @@
                 <div class="title">
                     实时同价
                 </div>
-                <span>实时同步海外官网价格及折扣</span>
+                <span>实时同步厂家价格及折扣</span>
             </div>
         </div>
         <div class="item">
@@ -2177,16 +2177,16 @@
                 <div class="title">
                     海量商品
                 </div>
-                <span>全球千万商品，一站购齐</span>
+                <span>全球千万酒品，一站购齐</span>
             </div>
         </div>
         <div class="item">
             <div class="icon">
-                正
+                付
             </div>
             <div>
                 <div class="title">
-                    一键海淘
+                    一键支付
                 </div>
                 <span>支付宝，微信一键下单</span>
             </div>
@@ -2212,19 +2212,17 @@
             <a href="#" target="_blank">我的账号</a>
             <a href="#" target="_blank">购物车</a>
             <a href="#" target="_blank">客服中心</a>
-            <a href="#" target="_blank">购物须知</a>
         </li>
         <li>
-            <div>HelpCenter</div>
-            <a href="#" target="_blank">购物流程</a>
-            <a href="#" target="_blank">支付方式</a>
+            <div>关于我们</div>
+            <a href="#" target="_blank">官网直购</a>
+            <a href="#" target="_blank">法律顾问</a>
             <a href="#" target="_blank">常见问题</a>
-            <a href="#" target="_blank">客服中心</a>
-            <a href="#" target="_blank">购物须知</a>
+
         </li>
     </ul>
 
-    <div class="statement clearfix">© 2011-2017 五五海淘（上海）科技股份有限公司 沪ICP备13007891号</div>
+    <div class="statement clearfix">© 2011-2017 合肥魅加网络科技有限公司 沪ICP备13007891号</div>
 </div>
 
 
