完成官网大促页面

--- a/templates/css/specialgood/specialgood.css
+++ b/templates/css/specialgood/specialgood.css
@@ -73,3 +73,56 @@
     margin-left: -18px;
     margin-top: 8px;
 }
+
+
+/*页码部分*/
+.specialpages .pagenation {
+    height: 38px;
+    background: #fff;
+}
+.specialpages .pages{
+    cursor: default;
+    font-size: 12px;
+    font-family: Tahoma, Verdana;
+    margin: 0 auto;
+    text-align: center;
+    position: relative;
+    top: 10px;
+}
+.specialpages .pages .number {
+    font-weight: 400;
+}
+.specialpages .pages .arrow, .specialpages .pages .count, .specialpages .pages .number {
+    color: #000;
+    font-size: 12px;
+    background-color: transparent;
+}
+
+.specialpages .pages .number a {
+    font: 400 12px/14px "BrandonGrotesque","AvenirNext-Regular","Helvetica","Arial",sans-serif!important;
+    color: #bababa;
+    text-decoration: none;
+    padding: 6px 10px 5px;
+    background-color: #fff;
+    cursor: pointer;
+
+}
+.specialpages .pages .current {
+    color: #333!important;
+    cursor: inherit!important;
+    background-color: #ffffff !important;;
+}
+.specialpages .pages .next {
+    margin-left: 15px;
+    border-left: 12px solid #cdcdcd;
+}
+.specialpages .pages .prev, .specialpages .pages .next {
+    width: 0;
+    height: 0;
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+    padding: 0 !important;
+    display: inline-block;
+    top: 3px;
+    position: relative;
+}
