--- a/templates/view/specialgood/index.html
+++ b/templates/view/specialgood/index.html
@@ -976,9 +976,24 @@
         </div><!--specialgood-offers end -->
     </div><!--bg-f5-to-f0 end-->
 
+<!--页码页面-->
+    <div class="specialpages">
+        <div class="pagenation clearboth">
+            <div class="pages"> <!-- 页码 1-10 -->
+            <span class="number">
+                <a href="javascript:;" title="第1页" class="current">1</a>
+                <a href="#" title="第2页" class="">2</a>
+                <a href="#" title="第3页" class="">3</a>
+                <a href="#" title="第4页" class="">4</a>
+                <a href="#" title="第5页" class="">5</a>
+                <a href="#" class="next" title="下一页"   ></a>
+            </span> <br>
+            </div>
+        </div>
+    </div>
 
 </div><!--out-wrap end-->
-
+<div class="bg-f5-to-f0" style="height: 40px;"></div>
 <!--版权信息代码-->
 <div class="new-footer clearfix" style="padding-bottom: 0px;">
     <div class="pop-img">
